Upgrade library to SolidJS, removing React dependencies and demo app. Update ESLint configuration for TypeScript support and adjust package.json for new peer dependencies. Revise README for SolidJS usage and update changelog for breaking changes.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,15 +7,10 @@
     "module": "commonjs",
     "esModuleInterop": true,
     "target": "ES5",
-    "jsx": "react",
+    "jsx": "preserve",
     "allowSyntheticDefaultImports": true,
-    "lib": [
-      "es5",
-      "es2015",
-      "dom"
-    ]
+    "lib": ["es5", "es2015", "dom"],
+    "skipLibCheck": true
   },
-  "exclude": [
-    "node_modules"
-  ]
+  "exclude": ["node_modules"]
 }
