--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@noriginmedia/norigin-spatial-navigation",
-  "version": "2.3.0",
-  "description": "React hooks based Spatial Navigation solution",
+  "version": "3.0.0",
+  "description": "SolidJS spatial navigation for TV and remote control",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
@@ -9,7 +9,6 @@
   ],
   "scripts": {
     "eslint": "eslint src",
-    "start": "webpack-dev-server --config webpack.config.dev.js",
     "build": "webpack --config webpack.config.prod.js",
     "prepublishOnly": "npm run eslint",
     "prepare": "npm run build",
@@ -22,8 +21,8 @@
     "url": "git+https://github.com/NoriginMedia/norigin-spatial-navigation.git"
   },
   "keywords": [
-    "react",
-    "react-hooks",
+    "solid",
+    "solidjs",
     "spatial-navigation",
     "remote-control-navigation",
     "tv-navigation"
@@ -31,11 +30,11 @@
   "author": "Dmitriy Bryokhin <dmitriy.bryokhin@noriginmedia.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/NoriginMedia/norigin-spatial-navigation/issues"
+    "url": "https://github.com/lucaskfp/Norigin-Spatial-Navigation-SolidJS/issues"
   },
-  "homepage": "https://github.com/NoriginMedia/norigin-spatial-navigation#readme",
+  "homepage": "https://github.com/lucaskfp/Norigin-Spatial-Navigation-SolidJS#readme",
   "peerDependencies": {
-    "react": ">=16.8.0"
+    "solid-js": "^1.0.0"
   },
   "dependencies": {
     "lodash": "^4.17.21"
@@ -43,34 +42,22 @@
   "devDependencies": {
     "@types/jest": "^29.5.12",
     "@types/lodash": "^4.14.179",
-    "@types/react": "^18.0.18",
-    "@types/react-dom": "^18.0.6",
-    "@types/styled-components": "^5.1.24",
     "@typescript-eslint/eslint-plugin": "^5.12.1",
     "@typescript-eslint/parser": "^5.12.1",
     "eslint": "^8.9.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-airbnb-typescript": "^16.1.0",
     "eslint-config-prettier": "^8.4.0",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-react": "^7.29.4",
-    "eslint-plugin-react-hooks": "^4.4.0",
-    "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.5.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "pre-commit": "^1.2.2",
     "prettier": "^2.5.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "styled-components": "^5.3.3",
+    "solid-js": "^1.8.0",
     "ts-jest": "^29.1.4",
     "ts-loader": "^9.2.6",
-    "typescript": "^4.5.5",
+    "typescript": "^5.0.0",
     "webpack": "^5.69.1",
-    "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.7.4"
+    "webpack-cli": "^4.9.2"
   },
   "pre-commit": [
     "eslint"
