--- a/package.json
+++ b/package.json
@@ -36,12 +36,9 @@
   "peerDependencies": {
     "solid-js": "^1.0.0"
   },
-  "dependencies": {
-    "lodash": "^4.17.21"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@types/jest": "^29.5.12",
-    "@types/lodash": "^4.14.179",
     "@typescript-eslint/eslint-plugin": "^5.12.1",
     "@typescript-eslint/parser": "^5.12.1",
     "eslint": "^8.9.0",
