chore: update dependencies in package.json and package-lock.json
Upgrade jsdom to version 28.1.0, pre-commit to version 1.0.10, and vitest to version 4.0.18. Add @vitest/coverage-v8 as a new development dependency. Update @asamuzakjp/css-color to version 4.1.2 and other related packages to their latest versions, ensuring compatibility with Node.js 20.19.0 and above.

--- a/package.json
+++ b/package.json
@@ -41,14 +41,14 @@
   "peerDependencies": {
     "solid-js": "^1.0.0"
   },
-  "dependencies": {},
   "devDependencies": {
-    "jsdom": "^26.0.0",
-    "pre-commit": "^1.2.2",
+    "@vitest/coverage-v8": "^4.0.18",
+    "jsdom": "^28.1.0",
+    "pre-commit": "^1.0.10",
     "prettier": "^2.5.1",
     "solid-js": "^1.8.0",
     "tsup": "^8.0.0",
     "typescript": "^5.0.0",
-    "vitest": "^3.0.0"
+    "vitest": "^4.0.18"
   }
 }
